| Bug #10041 | 'view' test fails in --ps-protocol test suite on multiple build hosts | ||
|---|---|---|---|
| Submitted: | 20 Apr 2005 19:55 | Modified: | 18 May 2005 4:15 |
| Reporter: | Matt Wagner | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 5.0.5 test build | OS: | Many |
| Assigned to: | Oleksandr Byelkin | Target Version: | |
[20 Apr 2005 19:55]
Matt Wagner
[29 Apr 2005 1:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24468
[29 Apr 2005 1:46]
Oleksandr Byelkin
ChangeSet 1.1849 05/04/29 02:43:56 bell@sanja.is.com.ua +4 -0 if outer refernce (identifier) was resolved with help of cache all subqueries and resolved item itseld have to be correctly marked as dependent (BUG#10041)
[18 May 2005 4:15]
Paul DuBois
Noted in 5.0.6 changelog.
